Fixed spacing of radio buttons

--- a/styles.css
+++ b/styles.css
@@ -71,11 +71,11 @@ label {
 }
 
 input {
-    margin-left: 60px;
+    margin-left: 110px;
 }
 
 #affirmation {
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 .message-center {
